@@ -96,7 +96,7 @@ static gboolean make_caldav_call(caldav_settings* settings,
 	if (settings->verify_ssl_certificate)
 		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 2);
 	else
-		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 0);
+		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYPEER, 0);
 	if (settings->custom_cacert)
 		curl_easy_setopt(curl, CURLOPT_CAINFO, settings->custom_cacert);
 	if (!test_caldav_enabled(curl, settings, info->error)) {
@@ -423,7 +423,7 @@ int caldav_enabled_resource(const char* URL, runtime_info* info) {
 	if (settings.verify_ssl_certificate)
 		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 2);
 	else
-		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYHOST, 0);
+		curl_easy_setopt(curl, CURLOPT_SSL_VERIFYPEER, 0);
 	if (settings.custom_cacert)
 		curl_easy_setopt(curl, CURLOPT_CAINFO, settings.custom_cacert);
 	if (settings.username) {
